# fictional-guide

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  makefile  pyproject.toml
.github/workflows/: ci.yml
application/: usecase.py  validator.py
domain/: constant.py  dto.py  error.py  port.py
domain/port/: __init__.py  i_broker_adapter.py  i_bucket_adapter.py  i_schema_registry.py  i_storage_connection_adapter.py  i_storage_session.py
etc/config/: loader.py  root.local.yml
etc/job/: fixture_bucket.py  fixture_storage.py  populate_broker.py  populate_bucket.py  py2abc.py  show_table.py
etc/mock/: correct_json.json  csv_sample.csv  wrong_json.json
infrastructure/: broker.py  bucket.py  repository.py  storage.py
infrastructure/query/: broker.py  delete_schema_all.sql  delete_schema_some.sql  insert_schema.sql  migration_2025_11_11.sql
interfaces/: fastapi.py  rabbitmq.py
test/: all_flow_test.py  conftest.py  fastapi_test.py  schema_val_test.py  validation_test.py
