[project]
name = "fictional-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "duckdb>=1.4.1",
    "faker>=37.12.0",
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "minio>=7.2.18",
    "mypy>=1.18.2",
    "pika>=1.3.2",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "starlette>=0.49.3",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = "."
log_cli = true
log_cli_level = "INFO"

[tool.mypy]
# Esta é a "configuração mágica" que você quer
strict = true

# Algumas outras recomendações úteis:
# Exige que todo 'def' tenha anotação de tipo
disallow_untyped_defs = true
# Impede o uso de 'Any' (que desliga a checagem)
disallow_any_unimported = true
# Aponta 'None' onde não deveria estar (ex: str | None)
warn_return_any = true
no_implicit_optional = true
